#created by me

shabdarthdbsdir = $(pkgdatadir)/dbs
shabdarthdbs_DATA = \
	a.db\
	b.db\
	c.db\
	d.db\
	e.db\
	f.db\
	g.db\
	h.db\
	i.db\
	j.db\
	k.db\
	l.db\
	m.db\
	n.db\
	o.db\
	p.db\
	q.db\
	r.db\
	s.db\
	t.db\
	u.db\
	v.db\
	w.db\
	x.db\
	y.db\
	z.db

EXTRA_DIST = $(shabdarthdbs_DATA) 

# Remove doc directory on uninstall
uninstall-local:
	-rm -r $(shabdarthdbsdir)
