desktop = shabdarth.desktop
logo_128 = hicolor/128x128/apps/shabdarth.png
logo_64 = hicolor/64x64/apps/shabdarth.png
logo_48 = hicolor/48x48/apps/shabdarth.png
logo_32 = hicolor/32x32/apps/shabdarth.png
logo_24 = hicolor/24x24/apps/shabdarth.png
logo_16 = hicolor/16x16/apps/shabdarth.png
logo = $(logo_128) $(logo_64) $(logo_48) $(logo_32) $(logo_24) $(logo_16)
EXTRA_DIST = $(desktop) $(logo)

desktopdir = $(datarootdir)/applications
desktop_DATA = $(desktop)
logodir = $(datarootdir)/icons
nobase_dist_logo_DATA = $(logo)
